fixed problem where snippet would disappear behind fixed header

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -31,6 +31,7 @@
   @apply grow;
 }
 .snippet-list {
+  padding-top: 75px;
   @apply flex flex-col;
 }
 .darkModeToggle {
